Fix sonar findings (#3161)
Signed-off-by: Marinov Avgustin <Avgustin.Marinov@bosch.com>